<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_app"
        style="@style/Title_style"
        android:text="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/title_name"
        style="@style/Text_style"
        android:text="@string/title_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toStartOf=""
        app:layout_constraintTop_toBottomOf="@+id/title_app" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username_TextInput"
        style="@style/Text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/username_input"
        app:helperText="@string/username_helper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_name" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password_TextInput"
        style="@style/Text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/password_input"
        app:helperText="@string/password_helper"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_TextInput" />

    <Button
        android:id="@+id/sign_in_button"
        style="@style/Text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_button"
        app:layout_constraintBottom_toStartOf="@+id/title_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_TextInput" />

    <TextView
        android:id="@+id/title_sign_in"
        style="@style/Text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_with_textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <ImageView
        android:id="@+id/twitter_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/twitter_account"
        android:src="@drawable/twitter"
        app:layout_constraintEnd_toStartOf="@+id/facebook_imageView"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_sign_in" />

    <ImageView
        android:id="@+id/facebook_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/facebook_account"
        android:src="@drawable/facebook"
        app:layout_constraintEnd_toStartOf="@id/google_imageView"
        app:layout_constraintStart_toEndOf="@+id/twitter_imageView"
        app:layout_constraintTop_toBottomOf="@+id/title_sign_in" />

    <ImageView
        android:id="@+id/google_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/google_account"
        android:src="@drawable/google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebook_imageView"
        app:layout_constraintTop_toBottomOf="@id/title_sign_in" />
</androidx.constraintlayout.widget.ConstraintLayout>